# ElectrodeIdentification

./: README.md
firmware/: CMakeLists.txt  adc_reader.cpp  adc_reader.hpp  config.hpp  serial_out.cpp  sweep.cpp  sweep.hpp  trigger.cpp  trigger.hpp
processing/: capture.py
